force-app/main/default/objects/Lab__c/fields/About_Your_Family_Status__c.field-meta.xml
<CustomField>
    <fullName>About_Your_Family_Status__c</fullName>
    <label>About Your Family Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Welcome_Packet_Status</valueSetName>
    </valueSet>
</CustomField>