force-app/main/default/objects/Lab__c/fields/About_Your_Family_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>About_Your_Family_Status_Timestamp__c</fullName>
    <label>About Your Family Status Timestamp</label>
    <type>DateTime</type>
</CustomField>