force-app/main/default/objects/Lab__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Labs</relationshipLabel>
    <relationshipName>Labs</relationshipName>
    <type>Lookup</type>
</CustomField>