force-app/main/default/objects/Lab__c/fields/ACord_Certificate_of_Storage_Generated__c.field-meta.xml
<CustomField>
    <fullName>ACord_Certificate_of_Storage_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Americord Certificate of Storage prepared, checked, and sent.</description>
    <label>AC Cert</label>
    <type>Checkbox</type>
</CustomField>