force-app/main/default/objects/Lab__c/fields/Allied_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Allied_Error_Message__c</fullName>
    <label>Allied Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>