force-app/main/default/objects/Lab__c/fields/Allied_Order_ID_MBD_Kit__c.field-meta.xml
<CustomField>
    <fullName>Allied_Order_ID_MBD_Kit__c</fullName>
    <label>Allied Order ID - MBD Kit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>