force-app/main/default/objects/Lab__c/fields/Alt_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Alt_Client_ID__c</fullName>
    <description>Used to populate Client ID when CS team sends a kit but was unable to cancel the Allied order, hence two kits are shipped.</description>
    <label>Alt Client ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>