force-app/main/default/objects/Lab__c/fields/Andwin_S_O_MBD_2__c.field-meta.xml
<CustomField>
    <fullName>Andwin_S_O_MBD_2__c</fullName>
    <inlineHelpText>This is used if a second MBD kit is sent to a client.</inlineHelpText>
    <label>Andwin S/O MBD 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>