force-app/main/default/objects/Lab__c/fields/Andwin_S_O_MBD__c.field-meta.xml
<CustomField>
    <fullName>Andwin_S_O_MBD__c</fullName>
    <label>Andwin S/O MBD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>