force-app/main/default/objects/Lab__c/fields/AutoBillPay__c.field-meta.xml
<CustomField>
    <fullName>AutoBillPay__c</fullName>
    <formula>Cord_Blood_Order__r.fw1__Auto_BillPay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoBillPay</label>
    <type>Checkbox</type>
</CustomField>