force-app/main/default/objects/Lab__c/fields/Baby_B_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Baby_B_Collection_Date__c</fullName>
    <label>Baby B - Collection Date</label>
    <type>Date</type>
</CustomField>