force-app/main/default/objects/Lab__c/fields/Baby_B_Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Baby_B_Kit_ID__c</fullName>
    <label>Baby B - Kit ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>