force-app/main/default/objects/Lab__c/fields/Baby_B_Kit_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Baby_B_Kit_Lot_Number__c</fullName>
    <label>Baby B - Kit Lot Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>