force-app/main/default/objects/Lab__c/fields/Baby_B_Name_of_Child__c.field-meta.xml
<CustomField>
    <fullName>Baby_B_Name_of_Child__c</fullName>
    <label>Baby B - Name of Child</label>
    <length>30</length>
    <type>Text</type>
</CustomField>