force-app/main/default/objects/Lab__c/fields/Baby_C_Kit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Baby_C_Kit_Expiration_Date__c</fullName>
    <label>Baby C - Kit Expiration Date</label>
    <type>Date</type>
</CustomField>