force-app/main/default/objects/Lab__c/fields/Baby_C_Kit_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Baby_C_Kit_Lot_Number__c</fullName>
    <label>Baby C - Kit Lot Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>