force-app/main/default/objects/Lab__c/fields/Baby_C_Products_Validated_by_the_Lab__c.field-meta.xml
<CustomField>
    <fullName>Baby_C_Products_Validated_by_the_Lab__c</fullName>
    <label>Baby C - Products Validated by the Lab</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>