force-app/main/default/objects/Lab__c/fields/Baby_s_Due_Date_new__c.field-meta.xml
<CustomField>
    <fullName>Baby_s_Due_Date_new__c</fullName>
    <label>Baby&apos;s Due Date</label>
    <type>Date</type>
</CustomField>