force-app/main/default/objects/Lab__c/fields/Birth_Date_from_Courier__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_from_Courier__c</fullName>
    <inlineHelpText>Provided via call center or digital courier pick-up</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>