force-app/main/default/objects/Lab__c/fields/Birth_Time_from_Courier__c.field-meta.xml
<CustomField>
    <fullName>Birth_Time_from_Courier__c</fullName>
    <inlineHelpText>Provided via call center or digital courier pick-up</inlineHelpText>
    <label>Birth Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>