force-app/main/default/objects/Lab__c/fields/Brochure_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Sent_Date__c</fullName>
    <formula>HCP_Practice__r.Brochure_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brochure Sent Date</label>
    <type>Date</type>
</CustomField>