force-app/main/default/objects/Lab__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Used for Airspace Reports</description>
    <formula>Cord_Blood_Order__r.Cancellation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>