force-app/main/default/objects/Lab__c/fields/Cancelled_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Client_ID__c</fullName>
    <description>Used for Airspace Reports.</description>
    <formula>Cord_Blood_Order__r.Original_Kit_ID__c</formula>
    <label>Cancelled Client ID</label>
    <type>Text</type>
</CustomField>