force-app/main/default/objects/Lab__c/fields/CB_Bag__c.field-meta.xml
<CustomField>
    <fullName>CB_Bag__c</fullName>
    <label>CB Bag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80/20</fullName>
            </value>
            <value>
                <fullName>5 Compartment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>