force-app/main/default/objects/Lab__c/fields/CB_Volume__c.field-meta.xml
<CustomField>
    <fullName>CB_Volume__c</fullName>
    <inlineHelpText>in milliliters (ml). cord blood collection volume, generally reported on the data collection sheet after receipt by the lab.</inlineHelpText>
    <label>CB Volume (ml)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>