force-app/main/default/objects/Lab__c/fields/CD34__c.field-meta.xml
<CustomField>
    <fullName>CD34__c</fullName>
    <label>CD34x10^6</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>