force-app/main/default/objects/Lab__c/fields/Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>Certificate_ID__c</fullName>
    <description>The Collection Kit and Certificate ID. Unique to each customer.</description>
    <inlineHelpText>The Collection Kit and Certificate ID. Unique to each customer.</inlineHelpText>
    <label>Client ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>