force-app/main/default/objects/Lab__c/fields/Character_count__c.field-meta.xml
<CustomField>
    <fullName>Character_count__c</fullName>
    <formula>len(   Shipping_State__c     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Character count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>