force-app/main/default/objects/Lab__c/fields/Child_s_Birth_Date_in_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Birth_Date_in_Current_Month__c</fullName>
    <formula>OR(MONTH(today())= MONTH( Collection_Date__c ),MONTH(TODAY()) + 1= MONTH( Collection_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child&apos;s Birth Date in Current Month</label>
    <type>Checkbox</type>
</CustomField>