force-app/main/default/objects/Lab__c/fields/Child_s_Name_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Name_Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated by automated process but can also be checked manually, Used in list views to help identify when a Client&apos;s record is ready for AC Certificate.</inlineHelpText>
    <label>Child&apos;s Name Incomplete</label>
    <type>Checkbox</type>
</CustomField>