force-app/main/default/objects/Lab__c/fields/Childrens_Name__c.field-meta.xml
<CustomField>
    <fullName>Childrens_Name__c</fullName>
    <description>Combines name of all children. Used for pop-up alerts on Americord Client Service App (Lighnting).</description>
    <formula>If (NOT(ISBLANK( Baby_C_Name_of_Child__c)), &quot;Triplets: &quot;&amp; Name_of_Child__c&amp;&quot;, &quot;&amp;Baby_B_Name_of_Child__c&amp;&quot; &amp; &quot;&amp;Baby_C_Name_of_Child__c &amp;&quot; - &quot;&amp; Text(MONTH(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(DAY(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(YEAR(Birth_Date_from_Courier__c)) ,
IF (AND
(ISBLANK(Baby_C_Name_of_Child__c), NOT(ISBLANK( Baby_B_Name_of_Child__c))), &quot;Twins: &quot;&amp;Name_of_Child__c&amp;&quot; &amp; &quot; &amp;Baby_B_Name_of_Child__c&amp;&quot; - &quot;&amp; Text(MONTH(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(DAY(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(YEAR(Birth_Date_from_Courier__c)),
IF (AND
(ISBLANK(Baby_C_Name_of_Child__c), ISBLANK( Baby_B_Name_of_Child__c), NOT(ISBLANK( Name_of_Child__c))),
&quot;Child: &quot;&amp;Name_of_Child__c&amp;&quot; - &quot;&amp; Text(MONTH(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(DAY(Birth_Date_from_Courier__c))&amp;&quot;/&quot;&amp;Text(YEAR(Birth_Date_from_Courier__c)),
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Children&apos;s Name</label>
    <type>Text</type>
</CustomField>