force-app/main/default/objects/Lab__c/fields/Client_Portal__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal__c</fullName>
    <formula>Medical_Professional__r.Client_Portal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to pull-in whether this Doctor Record is included in the &quot;Client Portal&quot; list purchased from ACOG.</inlineHelpText>
    <label>Client Portal</label>
    <type>Checkbox</type>
</CustomField>