force-app/main/default/objects/Lab__c/fields/Client_Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Account__c</fullName>
    <description>Pulls in the &quot;Client Portal&quot; attribute from the OBGYN Account record, which indicates that we purchased the list from ACOG.</description>
    <formula>HCP_Practice__r.Client_Portal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Portal (Account)</label>
    <type>Checkbox</type>
</CustomField>