force-app/main/default/objects/Lab__c/fields/Client_response_to_Lab_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>Client_response_to_Lab_Inquiries__c</fullName>
    <inlineHelpText>Currently 1000 characters; can be increased to 32K+.</inlineHelpText>
    <label>Client response to Lab Inquiries</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>