force-app/main/default/objects/Lab__c/fields/Collection_at_Lab__c.field-meta.xml
<CustomField>
    <fullName>Collection_at_Lab__c</fullName>
    <description>Populated by Process Builder; used by CS Team for Autobill Report.</description>
    <label>Collection at Lab</label>
    <type>Date</type>
</CustomField>