force-app/main/default/objects/Lab__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <description>Date that the cord blood was collected by the doctor. This may be found on the Data Collection Sheet or the email from the courier.</description>
    <inlineHelpText>Date that the cord blood was collected by the doctor. This may be found on the Data Collection Sheet or the email from the courier.</inlineHelpText>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>