force-app/main/default/objects/Lab__c/fields/Collection_Kit_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Kit_Status__c</fullName>
    <label>Collection Kit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Ship</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>SHIPPED</fullName>
            </value>
            <value>
                <fullName>Same Day (CS Team)</fullName>
            </value>
            <value>
                <fullName>Order Canceled</fullName>
            </value>
            <value>
                <fullName>Allied Error</fullName>
                <isActive>false</isActive>
                <label>Allied Error</label>
            </value>
            <value>
                <fullName>Received by Allied</fullName>
                <isActive>false</isActive>
                <label>Received by Allied</label>
            </value>
            <value>
                <fullName>Sent to Allied</fullName>
                <isActive>false</isActive>
                <label>Sent to Allied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>