force-app/main/default/objects/Lab__c/fields/Communication_Preferences_Lab__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preferences_Lab__c</fullName>
    <formula>Text(Cord_Blood_Order__r.CP_Lab_Medical__c)</formula>
    <inlineHelpText>LU Field from Cord Blood Order</inlineHelpText>
    <label>Communication Preferences: Lab</label>
    <type>Text</type>
</CustomField>