force-app/main/default/objects/Lab__c/fields/Communications_Preferences_Enroll_Forms__c.field-meta.xml
<CustomField>
    <fullName>Communications_Preferences_Enroll_Forms__c</fullName>
    <formula>Text(Cord_Blood_Order__r.CP_Enrollment_Paperwork__c)</formula>
    <inlineHelpText>Lookup from the Cord Blood Order</inlineHelpText>
    <label>Communications Preferences: Enroll Forms</label>
    <type>Text</type>
</CustomField>