force-app/main/default/objects/Lab__c/fields/Competitors_Kit__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Kit__c</fullName>
    <label>Competitors Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viacord</fullName>
            </value>
            <value>
                <fullName>CBR</fullName>
            </value>
            <value>
                <fullName>AlphaCord</fullName>
            </value>
            <value>
                <fullName>FamilyCord</fullName>
            </value>
            <value>
                <fullName>Stemcyte</fullName>
            </value>
            <value>
                <fullName>Cryo-cell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>