force-app/main/default/objects/Lab__c/fields/Contact_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_ID__c</fullName>
    <description>Used to update Contact on Order</description>
    <formula>Contact_2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 2 ID</label>
    <type>Text</type>
</CustomField>