force-app/main/default/objects/Lab__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Labs</relationshipLabel>
    <relationshipName>Labs</relationshipName>
    <type>Lookup</type>
</CustomField>