force-app/main/default/objects/Lab__c/fields/Cook_Reconciliation_Notes_Nov_2016__c.field-meta.xml
<CustomField>
    <fullName>Cook_Reconciliation_Notes_Nov_2016__c</fullName>
    <inlineHelpText>These are the discrepancies found on Cook&apos;s report during the November 2016 Lab Reconciliation project.</inlineHelpText>
    <label>Cook Reconciliation Notes Nov 2016</label>
    <type>TextArea</type>
</CustomField>