force-app/main/default/objects/Lab__c/fields/Cord_Blood_2_0_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_2_0_Ordered__c</fullName>
    <formula>Cord_Blood_Order__r.Cord_Blood_2_0_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZDeprecate Cord Blood 2.0 Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>