force-app/main/default/objects/Lab__c/fields/Cord_Blood_2_0_Stored__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_2_0_Stored__c</fullName>
    <label>Cord Blood 2.0 Stored</label>
    <summaryFilterItems>
        <field>Baby__c.Cord_Blood_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Baby__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>