force-app/main/default/objects/Lab__c/fields/Cord_Blood_Collection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Collection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The AirNet or Medical Courier confirmation was received. Stem cells were collected and delivered to the lab.</description>
    <label>Courier P/U</label>
    <type>Checkbox</type>
</CustomField>