force-app/main/default/objects/Lab__c/fields/Cord_Blood_Order__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cord Blood Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Labs</relationshipLabel>
    <relationshipName>Labs</relationshipName>
    <type>Lookup</type>
</CustomField>