force-app/main/default/objects/Lab__c/fields/Cord_Blood_Order_LU__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Order_LU__c</fullName>
    <description>Used to connect the Lab with FedEx. Do not delete.</description>
    <formula>Cord_Blood_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cord Blood Order LU</label>
    <type>Text</type>
</CustomField>