force-app/main/default/objects/Lab__c/fields/Cord_Blood_Storage__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Storage__c</fullName>
    <description>This field will be used to track the storage for the Cord Blood Service. This field will be populated by the Cord Blood Order Update flow and will hold the Annual, 20 Year or Lifetime values.</description>
    <inlineHelpText>This field will be used to track the storage for the Cord Blood Service. This field will be populated by the Cord Blood Order Update flow and will hold the Annual, 20 Year or Lifetime values.</inlineHelpText>
    <label>Cord Blood Storage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>