force-app/main/default/objects/Lab__c/fields/Cord_Tissue_Condition__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Condition__c</fullName>
    <label>Cord Tissue Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>