force-app/main/default/objects/Lab__c/fields/Cord_Tissue_Donation__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Donation__c</fullName>
    <description>This field will be used to track the Cord Tissue Donation Service. This field will be populated by the Cord Blood Order Update flow and will hold the YES or null values.</description>
    <label>Cord Tissue Donation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>