force-app/main/default/objects/Lab__c/fields/Cord_Tissue_Length__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Length__c</fullName>
    <label>Cord Tissue Length (cm)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>