force-app/main/default/objects/Lab__c/fields/Cord_Tissue_Stored__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Stored__c</fullName>
    <label>Cord Tissue Stored</label>
    <summaryFilterItems>
        <field>Baby__c.Cord_Tissue_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Baby__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>