force-app/main/default/objects/Lab__c/fields/Courier_Pick_Up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Courier_Pick_Up_Comments__c</fullName>
    <description>Automates email alert when populated.</description>
    <inlineHelpText>Populated when client includes comments via Digital Courier Pick-Up.</inlineHelpText>
    <label>Courier Pick-Up Comments</label>
    <type>TextArea</type>
</CustomField>