force-app/main/default/objects/Lab__c/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <inlineHelpText>Used in Andwin report.</inlineHelpText>
    <label>Create Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>