force-app/main/default/objects/Lab__c/fields/Date_for_OBGYN_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Date_for_OBGYN_Trigger__c</fullName>
    <description>Used in OBGYN Workflow to determine one day after completion.</description>
    <formula>if(
AND
( text(About_Your_Family_Status__c) = &quot;Completed&quot;,
 text(Your_Health_Care_Team_Status__c) = &quot;Completed&quot;,
 About_Your_Family_Status_Timestamp__c &gt;  Your_Health_Care_Team_Status_Timestamp__c) ,  DATEVALUE(About_Your_Family_Status_Timestamp__c),
if(
AND
( text(About_Your_Family_Status__c) = &quot;Completed&quot;,
 text(Your_Health_Care_Team_Status__c) = &quot;Completed&quot;,
 About_Your_Family_Status_Timestamp__c &lt;  Your_Health_Care_Team_Status_Timestamp__c) ,  DATEVALUE(Your_Health_Care_Team_Status_Timestamp__c), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date for OBGYN Trigger</label>
    <type>Date</type>
</CustomField>