force-app/main/default/objects/Lab__c/fields/Date_Time_Birth_Date_is_Populated__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Birth_Date_is_Populated__c</fullName>
    <description>Used for email alert to info Client Services if kit does not arrive at lab.</description>
    <label>Date &amp; Time Birth Date is Populated</label>
    <type>DateTime</type>
</CustomField>