force-app/main/default/objects/Lab__c/fields/DCS__c.field-meta.xml
<CustomField>
    <fullName>DCS__c</fullName>
    <label>DCS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Collection at lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>