force-app/main/default/objects/Lab__c/fields/DCS_Notes__c.field-meta.xml
<CustomField>
    <fullName>DCS_Notes__c</fullName>
    <inlineHelpText>These notes are sent directly to the client and must be client ready.</inlineHelpText>
    <label>DCS Notes sent to Client</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>