force-app/main/default/objects/Lab__c/fields/DCS_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>DCS_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCS Uploaded</label>
    <type>Checkbox</type>
</CustomField>